docs/examples/deploy/k8s/000-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: archived
  labels:
    app: archived
