docs/examples/deploy/k8s/archived-publisher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archived-publisher
  namespace: archived
  labels:
    app.kubernetes.io/name: archived-publisher
    app.kubernetes.io/app: archived-publisher
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: archived-publisher
      app.kubernetes.io/app: archived-publisher
  template:
    metadata:
      labels:
        app.kubernetes.io/name: archived-publisher
        app.kubernetes.io/app: archived-publisher
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/app
                operator: In
                values:
                - archived-publisher
            topologyKey: "kubernetes.io/node"
      terminationGracePeriodSeconds: 30
      containers:
        - name: publisher
          image: ghcr.io/teran/archived/publisher:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
