docs/examples/deploy/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: archived-publisher
  namespace: archived
  labels:
    app.kubernetes.io/name: archived-publisher
    app.kubernetes.io/app: archived-publisher
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: archived-publisher
    app.kubernetes.io/app: archived-publisher
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: archived-manager
  namespace: archived
  labels:
    app.kubernetes.io/name: archived-manager
    app.kubernetes.io/app: archived-manager
spec:
  ports:
  - name: grpc
    port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app.kubernetes.io/name: archived-manager
    app.kubernetes.io/app: archived-manager
  type: ClusterIP
